.lock removed, .json updated to user autoload-dev, autoload for tests updated

--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,8 @@
     },
     "autoload": {
         "psr-0": { "Devhelp\\FlowControl": "src/" }
+    },
+    "autoload-dev": {
+        "psr-0": { "Devhelp\\FlowControl\\Tests": "tests/" }
     }
 }
